@@ -27,11 +27,9 @@ package co.elastic.apm.agent.quartz.job;
 import co.elastic.apm.agent.bci.ElasticApmInstrumentation;
 import co.elastic.apm.agent.bci.VisibleForAdvice;
 import co.elastic.apm.agent.bci.bytebuddy.SimpleMethodSignatureOffsetMappingFactory.SimpleMethodSignature;
-import co.elastic.apm.agent.collections.WeakMapSupplier;
 import co.elastic.apm.agent.impl.transaction.AbstractSpan;
 import co.elastic.apm.agent.impl.transaction.Transaction;
 import co.elastic.apm.agent.util.VersionUtils;
-import com.blogspot.mydailyjava.weaklockfree.WeakConcurrentMap;
 import net.bytebuddy.asm.Advice;
 import org.quartz.JobExecutionContext;
 import org.slf4j.Logger;
@@ -40,10 +38,6 @@ import org.slf4j.LoggerFactory;
 import javax.annotation.Nullable;
 
 public class JobTransactionNameAdvice {
-
-    private static final String FRAMEWORK_NAME = "Quartz";
-    @VisibleForAdvice
-    public static final WeakConcurrentMap<Class<?>, String> versionsCache = WeakMapSupplier.createMap();
 
     @VisibleForAdvice
     public static final Logger logger = LoggerFactory.getLogger(JobTransactionNameInstrumentation.class);
@@ -72,14 +66,8 @@ public class JobTransactionNameAdvice {
                 logger.debug("Not creating transaction for method {} because there is already a transaction running ({})", signature, active);
             }
             if (transaction != null) {
-                transaction.setFrameworkName(FRAMEWORK_NAME);
-                String version = versionsCache.get(JobExecutionContext.class);
-                boolean isContains = versionsCache.containsKey(JobExecutionContext.class);
-                if (version == null && !isContains) {
-                    version = VersionUtils.getVersionFromPomProperties(JobExecutionContext.class, "org.quartz-scheduler", "quartz");
-                    versionsCache.put(JobExecutionContext.class, version);
-                }
-                transaction.setFrameworkVersion(version);
+                transaction.setFrameworkName("Quartz");
+                transaction.setFrameworkVersion(VersionUtils.getVersion(JobExecutionContext.class, "org.quartz-scheduler", "quartz"));
             }
         }
     }
